- better error message while downloading mirror list (#39675)
- rpmdrake:
  o fix view tooltip (#39694)
  o really make "by update availability" view usable (#39461)

Version 4.9.11 - 1 April 2008, Thierry Vignaud

- rpmdrake:
  o really remove "--emmbedded <id>" from ARGV when restarting after
    priority upgrades, thus fixing displaying it when run from mcc
    (#39262)

Version 4.9.10 - 30 March 2008, Thierry Vignaud

- rpmdrake:
  o do not crash if package is unknow (#39608)
  o do not crash if config file set empty values for some variables
    (eg: after old buggy gurpmi.addmedia garbaged it) (#39511)
  o fix priority upgrades:
    * do not preselect updates
    * do not recompute them when checking selection consistency just
      before actually installing

Version 4.9.9 - 28 March 2008, Thierry Vignaud

- gurpmi.addmedia:
  o handle --mirrorlist (Anssi)
  o drop 'with' parameter, it didn't work properly anymore (Anssi)
  o do not garbage ~/.rpmdrake
  o fix --distrib
  o fix --distrib --mirrorlist
- rpmdrake:
  o make "by update availability" view usable (#39461)

Version 4.9.8 - 25 March 2008, Thierry Vignaud

- ensure we always restart if needed
- fix displaying garbaged UTF-8 descriptions (eg: cgoban1)
  (instead of displaying "none")
- remove "--emmbedded <id>" from ARGV when restarting after priority
  upgrades, thus fixing displaying it when run from mcc (#39262)
- workaround crashing while performing medium name lookup (#38793)

Version 4.9.7 - 21 March 2008, Thierry Vignaud

- make the focus default on "yes" in yes/no dialogs
  (Emmanuel Blindauer, #39123)

Version 4.9.6 - 20 March 2008, Thierry Vignaud

- rpmdrake:
  o actually restrict "by_leaves" view to current mode (#39090)
  o fix sorting in "by_source" view

Version 4.9.5 - 19 March 2008, Thierry Vignaud

- rpmdrake:
  o readd by_source view (#30557, removed on 2006-07-09)

Version 4.9.4 - 19 March 2008, Thierry Vignaud

- rpmdrake:
  o handle migrating config file from rpmdrake <= 4.9