@@ -2,6 +2,7 @@
 - rpmdrake:
   o fix view tooltip (#39694)
   o really make "by update availability" view usable (#39461)
+  o split out installed packages if any in "by update availability" view
 
 Version 4.9.11 - 1 April 2008, Thierry Vignaud
 
